removendo bug do bash

--- a/firefox-developer-update.sh.1
+++ b/firefox-developer-update.sh.1
@@ -1,6 +1,7 @@
-#!/bin/sh
+!/bin/sh
 
 echo "Deletando quando versão antiga..."
+
 sudo rm -Rf /opt/firefox-developer*
 sudo rm -Rf /usr/bin/firefox-developer
 sudo rm -Rf /usr/share/applications/firefox-developer.desktop
@@ -24,5 +25,3 @@ echo "Deletando os arquivos baixados..."
 sudo rm -Rf firefox-developer.tar.bz2
 
 echo "Firefox Developer instalado!"
-echo "Para abrir: firefox-developer"
-echo "Para atualizar: firefox-developer-update"
